# dices-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  ChangeLog  DESIGN.md  README.md  justfile
.github/workflows/: develop.yml  rust.yml
benches/: parse.rs  random.rs
src/: aliases.rs  cli.rs  cmds.rs  complete.rs  core.rs  dice.rs  engine.rs  internal.rs  lib.rs  main.rs  parse.rs  result.rs  roll.rs  version.rs
src/compiler/: error.rs  mod.rs
src/dice/: dice.rs  internal.rs  mod.rs  parse.rs  result.rs
src/engine/: aliases.rs  cmd.rs  complete.rs  core.rs  error.rs  mod.rs  parse.rs
testdata/: aliases  merged.yaml
tests/: cli-opts.rs
