[package]
name = "dices-rs"
version = "0.9.6"
authors = ["Ollivier Robert <roberto@keltia.net>"]
description = "Small CLI utility to roll dices."
edition = "2021"
keywords = ["dice", "roll", "RPG", "roll", "random"]
categories = ["game-development", "games"]
repository = "https://github.com/keltia/dices-rs"
license = "MIT"
readme = "README.md"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "random"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive", "cargo"] }
home = "0.5"
itertools = "0.10"
log = "0.4"
nom = "7.1"
rand = "0.8"
rustyline = { version = "11.0", features = ["case_insensitive_history_search"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
stderrlog = "0.5"

[dev-dependencies]
assert_cmd = { version = "2.0", features = ["color", "color-auto"] }
criterion = "0.4"
rstest = "0.16"
