[package]
name = "dices-rs"
version = "0.10.0"
authors = ["Ollivier Robert <roberto@keltia.net>"]
description = "Small CLI utility to roll dices."
edition = "2024"
keywords = ["dice", "roll", "RPG", "roll", "random"]
categories = ["game-development", "games", "command-line-utilities"]
repository = "https://github.com/keltia/dices-rs"
license = "MIT"
readme = "README.md"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "random"
harness = false

[features]
default = ["rng"]
loop = []
rng = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
clap = { version = "4", features = ["derive", "cargo"] }
directories = "6"
itertools = "0.14"
log = "0.4"
nom = "8.0"
rand = "0.9"
rustyline = { version = "17.0", features = ["case_insensitive_history_search"] }
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0"
stderrlog = "0.6"
colored = "3.0"
strsim = "0.11"
rustyline-derive = "0.11"

[dev-dependencies]
assert_cmd = { version = "2.0", features = ["color", "color-auto"] }
criterion = "0.7"
rstest = "0.26"
